Github issue #153  Dashboard: Compose update collapsed is not to speck -- Fixed background for the collapsed composer -- Fixed extra space in bottom of the collapsed composer

--- a/src/projects/detail/Dashboard.scss
+++ b/src/projects/detail/Dashboard.scss
@@ -44,6 +44,38 @@
 
     .new-post-composer {
       margin-bottom: 4 * $base-unit;
+      background-color: $tc-white;
+      
+      .modal-row {
+        padding-bottom: 0px;
+
+        &:hover {
+          background-color: inherit;
+        }
+      }
+
+      input {
+        margin-bottom: 0px;
+      }
+
+      .draftjs-editor {
+        display: none;
+      }
+
+      &.expanded {
+
+        input {
+          margin-bottom: 2 * $base-unit;
+        }
+
+        .draftjs-editor {
+          display: block;
+        }
+      }
+
+      &.expanded.modal {
+        background-color: $tc-gray-neutral-light;
+      }
     }
 
     .feed-action-card + .feed-action-card {
